--- a/src/components/Videos.css
+++ b/src/components/Videos.css
@@ -31,3 +31,21 @@
   left: 50%;
   transform: translate(-50px, -50px);
 }
+
+.Video.cascade {
+  animation-name: fly_up;
+  animation-duration: 4s;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fly_up {
+  0% {
+    top: 30%;
+    opacity: 100%;
+  }
+  100% {
+    top: -50px;
+    opacity: 0%;
+  }
+}
