--- a/src/components/Videos.css
+++ b/src/components/Videos.css
@@ -9,6 +9,15 @@
   z-index: 2;
 }
 
+.Video_container {
+  display: grid;
+  place-items: center;
+  z-index: 2;
+  position: relative;
+  width: 500px;
+  height: 272px;
+}
+
 .Video {
   position: absolute;
   display: block;
@@ -32,7 +41,7 @@
   transform: translate(-50px, -50px);
 }
 
-.Video.cascade {
+.Video_container.cascade {
   animation-name: fly_up;
   animation-duration: 4s;
   animation-timing-function: ease-in-out;
@@ -41,11 +50,11 @@
 
 @keyframes fly_up {
   0% {
-    top: 30%;
+    top: 10%;
     opacity: 100%;
   }
   100% {
-    top: -50px;
+    top: -500px;
     opacity: 0%;
   }
 }
