--- a/src/components/Videos.css
+++ b/src/components/Videos.css
@@ -9,13 +9,52 @@
   z-index: 2;
 }
 
-.Video_container {
+.widget_container {
   display: grid;
   place-items: center;
-  z-index: 2;
   position: relative;
   width: 500px;
   height: 272px;
+}
+
+.cascade_container {
+  display: grid;
+  gap: 10px;
+  place-items: center;
+  position: absolute;
+  width: 500px;
+  height: 100vh;
+  transform: skewX(-19deg);
+  right: 0px;
+  top: 0px;
+  overflow: auto;
+  direction: rtl;
+}
+
+/* width */
+.cascade_container::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+.cascade_container::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+.cascade_container::-webkit-scrollbar-thumb {
+  background: red;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+.cascade_container::-webkit-scrollbar-thumb:hover {
+  background: #b30000;
+}
+
+.cascade_container .Video {
+  position: relative;
 }
 
 .Video {
@@ -41,11 +80,24 @@
   transform: translate(-50px, -50px);
 }
 
-.Video_container.cascade {
+.widget_container.cascade {
   animation-name: fly_up;
+  animation-duration: 3s;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+}
+
+.cascade_container.widget {
+  visibility: hidden;
+}
+
+.cascade_container.cascade {
+  opacity: 0;
+  animation-name: fly_up2;
   animation-duration: 4s;
   animation-timing-function: ease-in-out;
   animation-fill-mode: forwards;
+  animation-delay: 1s;
 }
 
 @keyframes fly_up {
@@ -56,5 +108,19 @@
   100% {
     top: -500px;
     opacity: 0%;
+  }
+}
+
+@keyframes fly_up2 {
+  0% {
+    right: 300px;
+    top: 100vh;
+    opacity: 0%;
+  }
+  100% {
+    transform: skewX(-19deg);
+    right: 0px;
+    top: 0px;
+    opacity: 100%;
   }
 }
