Added functionality - fetching youtube data

--- a/src/components/Videos.css
+++ b/src/components/Videos.css
@@ -73,6 +73,7 @@
   border-radius: 20px;
   background: linear-gradient(44deg, black, #747474);
   box-shadow: 5px 10px 18px #00000080;
+  background-size: contain;
 }
 
 .Video::before {
